# FASTAPI-books-exercise

./: .gitignore  README.md  books.db  books_simple.csv  main.py  pyproject.toml
DB/PROD/: books.db
DB/TEST/: test_books.db
LOGGERS/: loggers.py
TESTS/: mockDB.py  test_endpoints.py
