[project]
name = "exercise1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard,standart]>=0.129.0",
    "ipykernel>=7.2.0",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
]
